feat: update exp.